# local-rag

./: .gitignore  README.md  development.md  flake.nix  package-lock.json  package.json
nix/: shell.nix
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  commands.rs  config.rs  document.rs  embedding.rs  lib.rs  main.rs  ollama.rs
